syntax = "proto3";
package bestia.messages;

import "messages/model.proto";

option java_package = "net.bestia.messages.proto";
option java_outer_classname = "ComponentProtos";

message Component {
    int64 entity_id = 1;
}

message PositionComponent {
    int64 entity_id = 1;
    Vec3 position = 2;
}

message TemperatureComponent {
    Component component = 1;
    int32 max_tolerable_temp = 2;
    int32 min_tolerable_temp = 3;
    float current_temp = 4;
}

message VisualComponent {
  Component component = 1;
  string visual = 2;
}

message StatusComponent {
    Component component = 1;
    int32 physical_defense = 2;
    int32 magic_defense = 3;
    int32 strength = 4;
    int32 vitality = 5;
    int32 intelligence = 6;
    int32 agility = 7;
    int32 willpower = 8;
    int32 dexterity = 9;
    float hp_regen_rate = 10;
    float mana_regen_rate = 11;
    float stamina_regen_rate = 12;
    float critical_hitrate = 13;
    float dodge = 14;
    float casttime_mod = 15;
    float cooldown_mod = 16;
    float spell_duration_mod = 17;
    float hitrate = 18;
    float attack_speed = 19;
    float walkspeed = 20;
    Element element = 21;
}